demo docs updated, fixed broken link and squished logo

--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -60,8 +60,9 @@ header.top{
 }
 
 img.logo{
-    height:100%;
+    height:50px;
     width:auto;
+    display: block;
 }
 
 .logoText{
